--- a/index.html
+++ b/index.html
@@ -53,22 +53,20 @@
     </head>
 
     <body>
-        <img src="link.gif"/>
-
-        <div style="border:1px solid black; margin:auto;padding:30px;padding-top:50px;height:500px; width:800px;">
-        <div style="border:1px solid black; float:left; width:350px; height:100%; ">
+        <div style="margin:auto;padding:30px;padding-top:50px;height:500px; width:800px;">
+        <div style="float:left; width:350px; height:100%; ">
             <img src="https://64.media.tumblr.com/11ccec11e659f176a3e2ca883a8b5298/tumblr_pnzn5pDTcp1tihd2ko1_400.gif" style="width:100%; margin-top:180px;"/>
         </div>
         <div class="content" style="float:left;height:400px; width:340px; margin:auto; margin-top:10px;margin-left:20px;border:1px #b8bdc0 solid;padding:30px;padding-top:20px;">
-            <h1 style="border:1px solid black;font-family:Arial;margin-bottom:20px;"> <b><i>My Assignments</i></b></h1>
-            <div style="border: 1px solid black;height:320px;">
+            <h1 style="font-family:Arial;margin-bottom:20px;"> <b><i>My Assignments</i></b></h1>
+            <div style="height:320px;">
             <button class="assignment" onclick="window.location.href='/#'">Assignment 1</button>
             <button class="assignment" onclick="window.location.href='/#'">Assignment 2</button>
             <button class="assignment" onclick="location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">Assignment 3</button>
             <button class="assignment" onclick="window.location.href='/#'">Assignment 4</button>
             <button class="assignment" onclick="window.location.href='/#'">Assignment 5</button>
             </div>
-            <div id="namesection" style="border:1px solid black;">ANYA PATRICIA M. KUAN   《4-310》</div>
+            <div id="namesection">ANYA PATRICIA M. KUAN   《4-310》</div>
         </div>
         </div>
         
