--- a/index.html
+++ b/index.html
@@ -7,49 +7,7 @@
 
         <title>Assignments</title>
 
-        <style>
-
-        body{
-            background-color: #dee6eb;
-        }
-
-        h1 {
-            text-align: center;
-            font-family: Arial;
-            font-weight: normal;
-        }
-        .content{
-            font-family: Tahoma;
-            font-size:12px;
-            text-align:left;
-            background:white;
-        }
-
-        .assignment{
-            width:100%;
-            height:40px;
-            margin-bottom:5px;
-            background: #f0f1f2;
-            border:1px solid #dee6eb;
-            padding:2px;
-        }
-
-        .assignment:hover{
-            background:#bbd1e8;
-            cursor: pointer;
-        }
-
-        #namesection{
-            font-family:Times New Roman;
-            color: #858585;
-            font-size:10px;
-            text-align:center;
-            padding-bottom:5px;
-            letter-spacing:3px;
-            margin-top:10px;
-        }
-        
-        </style>
+        <link rel="stylesheet" href="styles.css">
 
     </head>
 
