--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="content" style="float:left;height:400px; width:340px; margin:auto; margin-top:10px;margin-left:20px;border:1px #b8bdc0 solid;padding:30px;padding-top:20px;">
             <h1 style="font-family:Arial;margin-bottom:20px;"> <b><i>My Assignments</i></b></h1>
             <div style="height:320px;">
-            <button class="assignment" onclick="window.location.href='/#'">Assignment 1</button>
+            <button class="assignment" onclick="window.location.href='/assign1.html'">Assignment 1</button>
             <button class="assignment" onclick="window.location.href='/#'">Assignment 2</button>
             <button class="assignment" onclick="location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">Assignment 3</button>
             <button class="assignment" onclick="window.location.href='/#'">Assignment 4</button>
