--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <title>Assignments</title>
 
         <link rel="stylesheet" href="styles.css">
+        
+        
 
     </head>
 
@@ -16,10 +18,10 @@
         <div style="float:left; width:350px; height:100%; ">
             <img src="https://64.media.tumblr.com/11ccec11e659f176a3e2ca883a8b5298/tumblr_pnzn5pDTcp1tihd2ko1_400.gif" style="width:100%; margin-top:180px;"/>
         </div>
-         <div class="content" style="float:left;height:400px; width:340px; margin:auto; margin-top:10px;margin-left:20px;padding-top:20px;">
+        <div class="content" style="float:left;height:400px; width:340px; margin:auto; margin-top:10px;margin-left:20px;padding-top:20px;">
             <h1 style="font-family:Arial;margin-bottom:20px;"> <b><i>My Assignments</i></b></h1>
             <div style="height:320px;">
-            <button class="assignment" onclick="window.location.href='/assign1.html'">Assignment 1</button>
+            <button class="assignment" onclick="location.href='assign1.html'">Assignment 1</button>
             <button class="assignment" onclick="window.location.href='/#'">Assignment 2</button>
             <button class="assignment" onclick="location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">Assignment 3</button>
             <button class="assignment" onclick="window.location.href='/#'">Assignment 4</button>
