--- a/assign1.html
+++ b/assign1.html
@@ -44,7 +44,7 @@
             <input id="fttom" name="fttom" type="number" readonly></input>
             <br/><br/>
         </div>
-        <a href="main.html">
+        <a href="index.html">
         <div id="home"><p style="margin-top:5px;">❯❯</p></div>
         </a>
         </div>
